fix vh on mobiles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,8 +4,12 @@
 }
 body,html{
   width: 100%;
-  height: 100%;
+  height: calc(var(--vh, 1vh) * 100);
   margin: 0;
   padding: 0;
   font-family: "text-font";
+}
+#__next,main{
+  width: 100%;
+  height: 100%;
 }
